now cleaner layout

--- a/_data/nav.yml
+++ b/_data/nav.yml
@@ -4,3 +4,9 @@
 - title: "Appium With Python"
   href: "appium/python/"
 
+- title: "Appium With Python"
+  href: "appium/python/"
+
+- title: "Appium With Python"
+  href: "appium/python/"
+
