--- a/_data/nav.yml
+++ b/_data/nav.yml
@@ -1,12 +1,8 @@
 - title: "Home"
   href: ""
+  
+- title: "Appium"
+  href: "appium"
 
-- title: "Appium With Python"
-  href: "appium/python/"
 
-- title: "Appium With Python"
-  href: "appium/python/"
-
-- title: "Appium With Python"
-  href: "appium/python/"
 
