--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
 name: Testdroid User Documentation
 markdown: kramdown
 highlighter: pygments
-baseurl: /testdroid-docs
+baseurl: /testdroid-documentation
