testdroid cloud integration docs

--- a/_data/nav.yml
+++ b/_data/nav.yml
@@ -9,3 +9,6 @@
 
 - title: "Testdroid Cloud"
   href: "testdroidCloudUI"
+
+- title: "Integration to Testdroid Cloud"
+  href: "testdroidCloudIntegration"
