config file for jekyll-sitemap support

--- a/_config.yml
+++ b/_config.yml
@@ -2,3 +2,5 @@ name: Testdroid User Documentation
 markdown: kramdown
 highlighter: pygments
 baseurl: /testdroid-documentation
+gems:
+  - jekyll-sitemap
