First version of docs.

--- a/_data/nav.yml
+++ b/_data/nav.yml
@@ -1,19 +1,105 @@
-- title: "Home"
+- title: "What's New?"
   href: ""
 
-- title: "Technical docs"
+- title: "About Testdroid"
   subcategories:
-    - subtitle: "Appium"
-      subhref: "appium"
-    - subtitle: "Calabash"
-      subhref: "calabash"
+    - subtitle: "Testdroid Cloud"
+    - subtitle: "Testdroid Privatecloud"
+    - subtitle: "Testdroid Enterprise"
 
-- title: "Testdroid Cloud"
-  href: "testdroidCloudUI"
-
-- title: "Integrations to Cloud"
+- title: "Prerequisites & Concepts"
   subcategories:
-    - subtitle: "Cloud API"
-      subhref: "testdroidCloudIntegration/api/index.html"
-    - subtitle: "Jenkins"
-      subhref: "testdroidCloudIntegration/jenkins-plugin.html"
+    - subtitle: "Account"
+      subhref: "prereq-and-concepts/account.html"    
+    - subtitle: "Devices"
+      subhref: "prereq-and-concepts/devices.html"        
+    - subtitle: "Terminology"
+      subhref: "prereq-and-concepts/terminology.html"      
+    - subtitle: "Test Automation"
+      subhref: "prereq-and-concepts/testautomation.html"      
+    - subtitle: "Remote Manual Access"
+      subhref: "prereq-and-concepts/remote.html"        
+    - subtitle: "REST API"
+      subhref: "prereq-and-concepts/rest-api.html"      
+    - subtitle: "Supported Technologies"
+      subhref: "prereq-and-concepts/supported.html"      
+
+- title: "Appium Tutorial"
+  subcategories:
+    - subtitle: "Introduction & Prerequisites"
+      subhref: "appium/introduction.html"        
+    - subtitle: "Client vs. Server Execution"
+      subhref: "appium/client-server.html"        
+    - subtitle: "Setup"
+      subhref: "appium/setup.html"         
+    - subtitle: "Desired Capabilities"
+      subhref: "appium/desiredcaps.html"      
+    - subtitle: "App & Environment Requirements"
+      subhref: "appium/environment.html"     
+    - subtitle: "Getting Started - First Test"
+      subhref: "appium/getting-started.html"      
+    - subtitle: "Using the API"
+      subhref: "appium/appium-API.html"      
+    - subtitle: "Appium FAQ"
+      subhref: "appium/faq.html"        
+    - subtitle: "Examples"
+
+- title: "Calabash Tutorial"
+  subcategories:
+    - subtitle: "Introduction & Prerequisites"
+      subhref: "calabash/introduction.html"
+    - subtitle: "Features, Steps and Scenarios"
+      subhref: "calabash/features-steps-scenarios.html"           
+    - subtitle: "Getting Started"
+      subhref: "calabash/getting-started.html"
+    - subtitle: "Calabash Android Details"
+      subhref: "calabash/details-of-calabash-android-support.html"
+    - subtitle: "Creating Calabash Tests"
+      subhref: "calabash/creating-calabash-tests.html"         
+    - subtitle: "Calabash FAQ"
+      subhref: "calabash/calabash-faq.html"      
+    - subtitle: "Examples"
+    
+- title: "Robotium Tutorial"
+  subcategories:
+    - subtitle: "Introduction & Prerequisites"
+    - subtitle: "ExtSolo"
+    - subtitle: "Getting Started"
+    - subtitle: "Robotium FAQ"
+    - subtitle: "Examples"
+
+- title: "Tools & Plugins"
+  subcategories:
+    - subtitle: "Gradle"
+      subhref: "gradle"
+    - subtitle: "Jenkins CI"
+      subhref: "jenkins"
+    - subtitle: "JIRA"
+      subhref: "jira"      
+    - subtitle: "Xcode"
+      subhref: "xcode"
+
+- title: "How-To Articles"
+  href: "how-tos/index.html"
+
+- title: "Testdroid API"
+  subcategories:
+    - subtitle: "API reference"
+      subhref: "api"
+    - subtitle: "Examples"
+      subhref: "api/examples"
+
+- title: "Troubleshooting"
+  subcategories:
+    - subtitle: "Bugs & Known Issues"
+      subhref: "bugs"
+    - subtitle: "FAQ"
+      subhref: "faq"
+
+- title: "Useful Links"
+  subcategories:
+    - subtitle: "Testdroid Blog"
+    - subtitle: "Testdroid Resource Library"
+    - subtitle: "Github Repository"
+    - subtitle: "Official Appium Documentation"
+    - subtitle: "Official Calabash Documentation"
