--- a/_config.yml
+++ b/_config.yml
@@ -2,7 +2,7 @@ name: Testdroid User Documentation
 markdown: kramdown
 highlighter: pygments
 url: http://docs.testdroid.com
-baseurl: /testdroid-documentation
+#baseurl: /testdroid-documentation
 gems:
   - jekyll-sitemap
   
