--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 name: Testdroid User Documentation
 markdown: kramdown
-highlighter: pygments
+highlighter: rouge
 #url: http://docs.testdroid.com
 #baseurl: /testdroid-documentation
 gems:
