--- a/_data/nav.yml
+++ b/_data/nav.yml
@@ -81,6 +81,8 @@
   subcategories:
     - subtitle: "Jenkins CI"
       subhref: "testdroid-cloud-integration/jenkins-plugin"
+    - subtitle: "Gradle"
+      subhref: "testdroid-cloud-integration/gradle/"
     - subtitle: "Rest API"
       subhref: "testdroid-cloud-integration/api/"
       subcategories:
@@ -90,9 +92,6 @@
           subhref: "testdroid-cloud-integration/api/examples/"
     - subtitle: "ExtSolo"
       subhref: "testdroid-cloud-integration/ext-solo/"
-
-#    - subtitle: "Gradle"
-#      subhref: "gradle"
 #    - subtitle: "JIRA"
 #      subhref: "jira"      
 #    - subtitle: "Xcode"
