refactored testdroid-cloud-ui directory

--- a/_data/nav.yml
+++ b/_data/nav.yml
@@ -36,6 +36,11 @@
       subhref: "appium/introduction"        
     - subtitle: "Client vs. Server Execution"
       subhref: "appium/client-server"        
+      subcategories:
+        - subtitle: "Python Server Side Example"
+          subhref: "appium/examples/python/server-side-appium-in-tc"
+        - subtitle: "Java Server Side Example"
+          subhref: "appium/examples/java/server-side-appium-in-tc"
     - subtitle: "Setup"
       subhref: "appium/setup"         
     - subtitle: "Desired Capabilities"
@@ -99,9 +104,9 @@
   
 - title: "User Manuals"
   href: "testdroid-cloud-ui"
-  subcategories:
-    - subtitle: "Testdroid Cloud"
-      subhref: "testdroid-cloud-ui"
+#  subcategories:
+#    - subtitle: "Testdroid Cloud"
+#      subhref: "testdroid-cloud-ui"
 #    - subtitle: "Testdroid Enterprise"
 #      subhref: "testdroid-enterprise"
   
