Fix calabash example url

--- a/_data/nav.yml
+++ b/_data/nav.yml
@@ -68,7 +68,7 @@
     - subtitle: "Creating Calabash Tests"
       subhref: "calabash/creating-calabash-tests"         
     - subtitle: "Examples"
-      subhref: "calabash/examples/"
+      subhref: "calabash/examples"
 
 - title: "Integrations"
   href: "testdroid-cloud-integration"
