restructured users manuals category

--- a/_data/nav.yml
+++ b/_data/nav.yml
@@ -86,11 +86,11 @@
       subhref: "testdroid-cloud-integration/api"
       subcategories:
         - subtitle: "API"
-          subhref: "testdroid-cloud-integration/api/rest-api/"
+          subhref: "testdroid-cloud-integration/api/rest-api"
         - subtitle: "API Examples"
           subhref: "testdroid-cloud-integration/api/examples"
     - subtitle: "ExtSolo Library"
-      subhref: "testdroid-cloud-integration/ext-solo/"
+      subhref: "testdroid-cloud-integration/ext-solo"
 #    - subtitle: "JIRA"
 #      subhref: "jira"      
 #    - subtitle: "Xcode"
@@ -105,23 +105,23 @@
       subhref: "how-tos/faq"
   
 - title: "User Manuals"
-  href: "testdroid-cloud-ui"
+  href: "user-manuals"
   subcategories:
     - subtitle: "Testdroid Cloud"
-      subhref: "testdroid-cloud-ui"
+      subhref: "user-manuals/testdroid-cloud"
       subcategories:
         - subtitle: "Projects"
-          subhref: "testdroid-cloud-ui/projects/"
+          subhref: "user-manuals/testdroid-cloud/projects"
         - subtitle: "Manual Testing"
-          subhref: "testdroid-cloud-ui/manual-testing/"
+          subhref: "user-manuals/testdroid-cloud/manual-testing"
         - subtitle: "Device Groups"
-          subhref: "testdroid-cloud-ui/device-groups/"
+          subhref: "user-manuals/testdroid-cloud/device-groups"
         - subtitle: "Account Settings"
-          subhref: "testdroid-cloud-ui/account-settings/"
+          subhref: "user-manuals/testdroid-cloud/account-settings"
         - subtitle: "Reports"
-          subhref: "testdroid-cloud-ui/reports/"
+          subhref: "user-manuals/testdroid-cloud/reports"
     - subtitle: "Testdroid Enterprise"
-      subhref: "testdroid-enterprise"
+      subhref: "user-manuals/testdroid-enterprise"
   
 #- title: "Robotium Tutorial"
 #  href: "robotium"
@@ -135,7 +135,7 @@
 #- title: "Testdroid API"
 #  subcategories:
 #    - subtitle: "API reference"
-#      subhref: "api/apidocs/"
+#      subhref: "api/apidocs"
 #    - subtitle: "Examples"
 #      subhref: "api/examples"
 
