Make all Example pages visible in navigation

--- a/_data/nav.yml
+++ b/_data/nav.yml
@@ -47,20 +47,18 @@
     - subtitle: "Examples"
       subhref: "appium/examples"
       subcategories:
-        - subtitle: "Python"
+        - subtitle: "Installing Python pre-requisites"
           subhref: "appium/examples/python"
-          subcategories:
-            - subtitle: "Python Client Side Native App Example"
-              subhref: "appium/examples/python/running-the-test-script"
-            - subtitle: "Python Client Side Hybrid App Example"
-              subhref: "appium/examples/python/native-hybrid-web-app-testing"
-            - subtitle: "Python Server Side Example"
-              subhref: "appium/examples/python/server-side-appium-in-tc"
-        - subtitle: "Java"
+        - subtitle: "Python Client Side Native App Example"
+          subhref: "appium/examples/python/running-the-test-script"
+        - subtitle: "Python Client Side Hybrid App Example"
+          subhref: "appium/examples/python/native-hybrid-web-app-testing"
+        - subtitle: "Python Server Side Example"
+          subhref: "appium/examples/python/server-side-appium-in-tc"
+        - subtitle: "Java Client Side Examples"
           subhref: "appium/examples/java"
-          subcategories:
-            - subtitle: "Java Server Side Example"
-              subhref: "appium/examples/java/server-side-appium-in-tc"
+        - subtitle: "Java Server Side Example"
+          subhref: "appium/examples/java/server-side-appium-in-tc"
         - subtitle: "Moving Tests To Cloud"
           subhref: "appium/examples/moving-tests-to-cloud"
 
