Re-structure Appium Examples

--- a/_data/nav.yml
+++ b/_data/nav.yml
@@ -48,17 +48,15 @@
       subhref: "appium/examples"
       subcategories:
         - subtitle: "Installing Python pre-requisites"
-          subhref: "appium/examples/python"
-        - subtitle: "Python Client Side Native App Example"
-          subhref: "appium/examples/python/running-the-test-script"
-        - subtitle: "Python Client Side Hybrid App Example"
-          subhref: "appium/examples/python/native-hybrid-web-app-testing"
+          subhref: "appium/examples/python-install-pre-requisites"
+        - subtitle: "Python Client Side Example"
+          subhref: "appium/examples/python-client-side-example"
         - subtitle: "Python Server Side Example"
-          subhref: "appium/examples/python/server-side-appium-in-tc"
+          subhref: "appium/examples/server-side-appium-in-tc-python"
         - subtitle: "Java Client Side Examples"
-          subhref: "appium/examples/java"
+          subhref: "appium/examples/java-client-side-example"
         - subtitle: "Java Server Side Example"
-          subhref: "appium/examples/java/server-side-appium-in-tc"
+          subhref: "appium/examples/server-side-appium-in-tc-java"
         - subtitle: "Moving Tests To Cloud"
           subhref: "appium/examples/moving-tests-to-cloud"
 
