removed prerequisites and concepts menu item. Same info moved to under other menus

--- a/_data/nav.yml
+++ b/_data/nav.yml
@@ -11,23 +11,19 @@
     - subtitle: "Testdroid Enterprise"
       subhref: "products/testdroid-enterprise.html"
 
-- title: "Prerequisites & Concepts"
-  href: "prereq-and-concepts"
-  subcategories:
-    - subtitle: "Account"
-      subhref: "prereq-and-concepts/account.html"
-    - subtitle: "Devices"
-      subhref: "prereq-and-concepts/devices.html"
-    - subtitle: "Terminology"
-      subhref: "prereq-and-concepts/terminology.html"
-    - subtitle: "Test Automation"
-      subhref: "prereq-and-concepts/testautomation.html"
-    - subtitle: "Remote Manual Access"
-      subhref: "prereq-and-concepts/remote.html"
-    - subtitle: "REST API"
-      subhref: "prereq-and-concepts/rest-api.html"
-    - subtitle: "Supported Technologies"
-      subhref: "prereq-and-concepts/supported.html"
+#- title: "Prerequisites & Concepts"
+#  href: "prereq-and-concepts"
+#  subcategories:
+#    - subtitle: "Terminology"
+#      subhref: "prereq-and-concepts/terminology.html"
+#    - subtitle: "Test Automation"
+#      subhref: "prereq-and-concepts/testautomation.html"
+#    - subtitle: "Remote Manual Access"
+#      subhref: "prereq-and-concepts/remote.html"
+#    - subtitle: "REST API"
+#      subhref: "prereq-and-concepts/rest-api.html"
+#    - subtitle: "Supported Technologies"
+#      subhref: "prereq-and-concepts/supported.html"
 
 - title: "Appium Tutorial"
   href: "appium"
@@ -104,6 +100,8 @@
       subhref: "how-tos/ipa-requirements"
     - subtitle: "Testdroid FAQ"
       subhref: "how-tos/faq"
+    - subtitle: "Test Automation"
+      subhref: "how-tos/testautomation"
 
 - title: "User Manuals"
   href: "user-manuals"
@@ -117,6 +115,8 @@
           subhref: "user-manuals/testdroid-cloud/manual-testing"
         - subtitle: "Device Groups"
           subhref: "user-manuals/testdroid-cloud/device-groups"
+        - subtitle: "Account"
+          subhref: "user-manuals/account"
         - subtitle: "Account Settings"
           subhref: "user-manuals/testdroid-cloud/account-settings"
         - subtitle: "Reports"
@@ -125,6 +125,8 @@
           subhref: "user-manuals/testdroid-cloud/dashboard"
         - subtitle: "Video Tutorials"
           subhref: "user-manuals/testdroid-cloud/video-tutorials"
+        - subtitle: "Supported Technologies"
+          subhref: "user-manuals/testdroid-cloud/supported-technologies"
         - subtitle: "Security"
           subhref: "user-manuals/testdroid-cloud/security"
     - subtitle: "Testdroid Enterprise"
